filter buttons spacing corrected

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   display: flex;
+  overflow: hidden;
 }
 
 .sideBar {
@@ -12,7 +13,7 @@
   display: flex;
   flex-direction: column;
   width: 15vw;
-  max-height: 100vh;
+  max-height: 99vh;
   border-bottom: 5px solid #4b3e91;
   border-top: 5px solid #4b3e91;
 }
