--- a/src/Components/Filter.components/Filter.css
+++ b/src/Components/Filter.components/Filter.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
+  gap: 15px;
   height: 64vh;
   width: 15vw;
   padding-top: 35px;
